# PRevent

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: datadog-static-analysis.yaml
docker/: Dockerfile  README.md
docs/: DOCS.md  architecture.html  architecture_gh_enterprise.html  docs.md  logic_flow.mmd  sequence.mmd
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  gke-ingress.yaml  network-policy.yaml  pr-event.yaml  prevent-config.yaml  prevent.yaml
setup/: app_setup.py  setters.py  setup.py  setup_container.py  setup_tool.py  utils.py
setup/secret_managers/: configure_cli.py  install_cli.py  is_configured.py  print_instructions.py  vault_local_config.sh
setup/tls/: settings.py  setup.py  validate_certs.py
src/: app.py  branch_protection.py  config.py  github_client.py  github_utils.py  reviewers.py  secret_manager.py  settings.py  webhook.py
src/scan/: languages.py  scan_logic.py  utils.py
src/scan/detectors/: run_semgrep.py  utils.py
src/scan/detectors/malicious-code-ruleset/: CONTRIBUTING.md  README.md
src/scan/detectors/malicious-code-ruleset/dynamic_execution/bash/: bash_dynamic-execution_multiple.test.sh
src/scan/detectors/malicious-code-ruleset/dynamic_execution/php/: php_dynamic-execution_multiple.test.php  php_dynamic-execution_system.test.php
src/scan/detectors/malicious-code-ruleset/dynamic_execution/python/: python_dynamic-execution-system.test.py  python_dynamic-execution-system.yml
src/scan/detectors/malicious-code-ruleset/obfuscation/clojure/: clojure_obfuscation_conditions.yml  clojure_obfuscation_methods-masking.test.clojure
src/scan/detectors/malicious-code-ruleset/obfuscation/csharp/: csharp_obfuscation_conditions.test.cs  (+3 more)
src/scan/detectors/obfuscation_extras/: detect_encoded.py  detect_executable.py  detect_homoglyph.py  detect_space_hidden.py
src/scan/detectors/offline-ruleset-copy/obfuscation/: generic_obfuscation_operators.yml
src/utils/: diffs.py  github.py  patch.py  webhook.py
src/validation/: config.py  webhook.py
tests/: test_branch_protection.py  test_config.py  test_github_client.py  test_patch_utils.py
(+135 files in other folders)
