[build-system]
requires = [ "poetry-core=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PRevent"
version = "1.0.0"
description = "An open-source GitHub app for malware-in-code scanning"
authors = [ "Matan Giladi <matan.giladi@apiiro.com>",]
license = "MIT"
repository = "https://github.com/apiiro/PRevent.git"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.2"
cryptography = "44.0.0"
fastapi = "0.115.8"
uvicorn = "0.34.0"
pygithub = "2.5.0"
pygments = "2.19.0"
pyjwt = "2.10.1"
pytest = "8.3.4"
requests = "2.32.3"
semgrep = "1.102.0"
toml = "0.10.2"
werkzeug = "3.1.3"
hvac = "2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
